--- a/vinson/vinson.html
+++ b/vinson/vinson.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 
+1. create a folder with your name
+2. create a html file in your folder
+3. git add .
+4. git commit -m "first commit"
+5. git push
+
 </body>
 </html>
