--- a/vinson/day1/overview.html
+++ b/vinson/day1/overview.html
@@ -31,5 +31,64 @@
         <li>(parameter, parameter2) => { console.log(parameter, parameter2)}</li>
     </ul>
 
+<h2>Operators</h2>
+
+    <ul>
+        <li>=</li>
+        <li>+=</li>
+        <li>+</li>
+        <li>/</li>
+        <li>*</li>
+        <li>++</li>
+    </ul>
+
+
+
+    <ul>
+        <li> < </li>
+        <li> > </li>
+        <li> >= </li>
+        <li> === </li>
+        <li>==</li>
+        <li>!</li>
+        <li>!=</li>
+        <li>!==</li>
+    </ul>
+
+    <ul>
+        <li>
+            &&
+        </li>
+        <li>
+            ||
+        </li>
+    </ul>
+
+
+    <h2>Truthy/Falsy</h2>
+    <ul>
+        <li>boolean</li>
+        <li>true/false</li>
+        <li>Numbers</li>
+        <li>any/0</li>
+        <li>Strings</li>
+        <li>any/ ''</li>
+    </ul>
+
+<h2>
+    Loops
+</h2>
+
+<ul>
+    <li>for(let i = 0; i < 10; i++ ) {
+        console.log(i);
+        }</li>
+
+</ul>
+
+<h2>event listeners</h2>
+<ul>
+    <li>document.body.addEventListener('click', function() {// code})</li>
+</ul>
 </body>
 </html>
