--- a/vinson/day1/nameGen.html
+++ b/vinson/day1/nameGen.html
@@ -15,7 +15,7 @@
 
     <script>
         const h2 = document.querySelector('h2');
-        const names = ['Eric', 'Alex', 'Dominique', 'Faith', 'Micheal', 'frank', 'vinson', 'david'];
+        const names = ['Eric', 'Alex', 'Dominique', 'Faith', 'Micheal', 'frank', 'vinson', 'david', 'Jonte'];
         function getName() {
             console.log('name');
             const random = Math.random() * names.length;
