--- a/vinson/projects/utility-belt.html
+++ b/vinson/projects/utility-belt.html
@@ -12,10 +12,12 @@
             background-color: black;
             margin: .3em;
             padding: 1em;
+            display: flex;
+            flex-wrap: wrap;
         }
         .subject {
-            margin: 1em;
-            padding: 1em;
+            margin: .1em 1em;
+            padding: .5em;
             background-color: yellow;
         }
         h2, pre {
