--- a/vinson/day7/practice.html
+++ b/vinson/day7/practice.html
@@ -7,14 +7,17 @@
         .whatever {
             color: red;
         }
+        .another {
+            background-color: aqua;
+        }
     </style>
 </head>
 <body>
-<p>I am the wrong one</p>
 <h1>Practice</h1>
 
 <button></button>
-
+<button>2nd image</button>
 <script src="practice.js"></script>
+<img src="" alt="">
 </body>
 </html>
