--- a/vinson/day9/users.html
+++ b/vinson/day9/users.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
+    <style>
+        .selected {
+            background-color: lime;
+        }
+    </style>
 </head>
 <body>
 
