--- a/vinson/day11/band.html
+++ b/vinson/day11/band.html
@@ -6,11 +6,19 @@
 </head>
 <body>
 
-<audio src="../day9/kick.mp3"></audio>
-<audio src="../day9/snare.mp3"></audio>
+<audio data-sound="kick" src="../day9/kick.mp3"></audio>
+<audio data-sound="snare" src="../day9/snare.mp3"></audio>
+
 <script>
     const sounds = document.querySelectorAll('audio');
-    sounds.forEach()
+    sounds.forEach( function ( item , index, arr) {
+      console.log(item, index, arr);
+        const button = document.createElement('button');
+        document.body.appendChild(button);
+        button.innerText = item.dataset.sound;
+    } );
+
+
 </script>
 </body>
 </html>
